--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,27 @@
-body{
-    background-color: beige;
+.login-button{
+    border-radius: 20px;
+}
+.price{
+    color: red;
+    font-weight: 500;   
+}
+.price-desc{
+    font-style: italic;
+    font-size: 0.75rem;
+}
+.price-text{
+    font-size: 0.75rem;
+}
+.carousel-control-prev-icon{
+    background-color: black ;
+    padding: 10px;
+    border-radius:25px;
+}
+.carousel-control-next-icon{
+    background-color: black ;
+    padding: 10px;
+    border-radius:25px;
+}
+.card{
+    width: fit-content;
 }
