add product page

--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light">
     <div class="container-lg">
-      <a class="navbar-brand" href="#"><img src="img/ikea_logo.png" height="50px" alt=""></a>
+      <a class="navbar-brand" href="/"><img src="img/ikea_logo.png" height="50px" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,7 +27,7 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <a href="#" class="btn btn-outline-dark" style="border-radius: 10px">Login</a>
+        <a href="/product-register" class="btn btn-outline-dark" style="border-radius: 10px">Edit Product</a>
     </div>
     </div>
   </nav>
