--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,42 @@
     padding: 10px;
     border-radius:25px;
 }
+.card-container{
+    display: flex;
+    flex-wrap : wrap;
+}
+.footer{
+    margin: 2rem 0 0;
+    background-color: #e8e8e8;
+    padding: 2rem;
+}
+.footer p{
+    font-size: 18px;
+}
+.col a{
+    color: black;
+    text-decoration: none;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+.col a:hover{
+    color: rgba(0, 0, 0, 0.663);
+}
+
+.footer .container-lg{
+    border-bottom: 1px solid black;
+    padding-bottom: 2rem;
+}
+
+.container-detail{
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.058);
+    border: 1px solid rgba(0, 0, 0, 0.314); ;
+    padding: 50px;
+    border-radius: 20px;
+    display: flex;
+}
+
 .card{
-    width: fit-content;
+    margin: 5px;
 }
