--- a/views/layouts/cards.ejs
+++ b/views/layouts/cards.ejs
@@ -1,5 +1,5 @@
-<div class="card-group">
-  <div class="card">
+  <div class="card-container" >
+  <div class="card" style="width: 16rem;">
     <img src="img/products/product1.jpg" class="card-img-top" alt="..." />
     <div class="card-body">
       <h5 class="card-title">Vitting Lampu</h5>
@@ -11,7 +11,7 @@
       <a href="#" class="btn btn-outline-primary">Detail</a>
     </div>
   </div>
-  <div class="card">
+  <div class="card" style="width: 16rem;">
     <img src="img/products/product1.jpg" class="card-img-top" alt="..." />
     <div class="card-body">
       <h5 class="card-title">Vitting Lampu</h5>
@@ -23,7 +23,7 @@
       <a href="#" class="btn btn-outline-primary">Detail</a>
     </div>
   </div>
-  <div class="card">
+  <div class="card" style="width: 16rem;">
     <img src="img/products/product1.jpg" class="card-img-top" alt="..." />
     <div class="card-body">
       <h5 class="card-title">Vitting Lampu</h5>
@@ -35,7 +35,31 @@
       <a href="#" class="btn btn-outline-primary">Detail</a>
     </div>
   </div>
-  <div class="card">
+  <div class="card" style="width: 16rem;">
+    <img src="img/products/product1.jpg" class="card-img-top" alt="..." />
+    <div class="card-body">
+      <h5 class="card-title">Vitting Lampu</h5>
+      <p class="price-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, quis!
+      </p>
+      <p class="price">Rp. 100.000</p>
+      <p class="price-desc">selama persediaan masih ada</p>
+      <a href="#" class="btn btn-outline-primary">Detail</a>
+    </div>
+  </div>
+  <div class="card" style="width: 16rem;">
+    <img src="img/products/product1.jpg" class="card-img-top" alt="..." />
+    <div class="card-body">
+      <h5 class="card-title">Vitting Lampu</h5>
+      <p class="price-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, quis!
+      </p>
+      <p class="price">Rp. 100.000</p>
+      <p class="price-desc">selama persediaan masih ada</p>
+      <a href="#" class="btn btn-outline-primary">Detail</a>
+    </div>
+  </div>
+  <div class="card" style="width: 16rem;">
     <img src="img/products/product1.jpg" class="card-img-top" alt="..." />
     <div class="card-body">
       <h5 class="card-title">Vitting Lampu</h5>
