--- a/views/product-register.ejs
+++ b/views/product-register.ejs
@@ -6,7 +6,7 @@
         <th scope="col">Nama</th>
         <th scope="col">Harga</th>
         <th scope="col">Deskripsi</th>
-        <th scope="col">Details</th>
+        <th scope="col">Action</th>
       </tr>
     </thead>
     <tbody>
@@ -25,8 +25,9 @@
           <td><%=product.nama_produk %></td>
           <td>Rp. <%=product.harga %></td>
           <td><%=product.deskripsi %></td>
-          <td><a href="/product=<%=product.id%>"><span class="btn btn-info">Details</span></a></td>
-        </tr>
+          <td><a href="/product=<%=product.id%>"><span class="btn btn-info">Details</span></a> 
+          <button  class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this data?')">Delete</button>
+          </tr>
       <% }) %>
       <a href="/contact/add">
       <button type="button" class="btn btn-primary">Tambahkan product</button></a>
