--- a/views/products.ejs
+++ b/views/products.ejs
@@ -15,7 +15,7 @@
           </p>
           <p class="price">Rp. <%= product.harga %></p>
           <p class="price-desc">selama persediaan masih ada</p>
-          <a href="/product=<%=product.id%>" class="btn btn-outline-primary">Detail</a>
+          <a href="/product-register=<%=product.id%>" class="btn btn-outline-primary">Detail</a>
         </div>
       </div>
 <% }); %>
