Add form for add product

--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -38,6 +38,7 @@
               class="form-control"
               id="inputFile"
               name="nama_file"
+              value="produk1"
               required
             />
           </div>
